[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/minigames/falling_letters.gd" id="1_script"]

[node name="FallingLetters" type="Node"]
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.05, 0.15, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "FALLING LETTERS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TopRow" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="CountdownLabel" type="Label" parent="VBoxContainer/TopRow"]
unique_name_in_owner = true
layout_mode = 2
text = "3"
horizontal_alignment = 1

[node name="TimerLabel" type="Label" parent="VBoxContainer/TopRow"]
unique_name_in_owner = true
layout_mode = 2
text = "Time: 10.0"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="VBoxContainer/TopRow"]
layout_mode = 2
custom_minimum_size = Vector2(20, 0)

[node name="ScoreLabel" type="Label" parent="VBoxContainer/TopRow"]
unique_name_in_owner = true
layout_mode = 2
text = "Typed: 0 / 25"
horizontal_alignment = 1

[node name="PlayArea" type="Control" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
custom_minimum_size = Vector2(0, 400)

[node name="FeedbackLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = ""
horizontal_alignment = 1
vertical_alignment = 1
